src/validation/tests/snapshots/rusty__validation__tests__variable_validation_tests__constant_fb_instances_are_illegal.snap
---
source: src/validation/tests/variable_validation_tests.rs
expression: "&diagnostics"
---
error[E035]: Invalid constant y, FUNCTION_BLOCK- and CLASS-instances cannot be declared constant
   ┌─ <internal>:15:13
   │
15 │             y : MyFb;
   │             ^ Invalid constant y, FUNCTION_BLOCK- and CLASS-instances cannot be declared constant

error[E035]: Invalid constant z, FUNCTION_BLOCK- and CLASS-instances cannot be declared constant
   ┌─ <internal>:16:13
   │
16 │             z : cls;
   │             ^ Invalid constant z, FUNCTION_BLOCK- and CLASS-instances cannot be declared constant
